# win-win-map

./: LICENSE.md  README.md  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml
src/: App.css  App.tsx  app-store.ts  drag-util.ts  fetch-objects.ts  style.css  util.ts  winwin-type.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: get_events.rs  get_monitors.rs  get_windows.rs  move_cursor.rs  move_windows.rs
src-tauri/icons/: icon.icns
src-tauri/src/: backend.rs  lib.rs  log.rs  main.rs  util.rs
src-tauri/src/winapi/: mod.rs  monitors.rs  mouse.rs  structs.rs  virtual_desktop.rs  winevents.rs  winprocess.rs  winwins.rs
src/components/: AppMain.tsx  CursorConfigElm.tsx  IntegratedFrame.tsx  MonitorFrame.tsx  SummonPosConfElm.ts  WindowFrame.tsx
src/components/configComponents/: ConfigElm.tsx  CursorConfigElm.tsx  DragTermMarginConfElm.tsx  SummonPosConfElm.tsx  WinWinMapSummonConfElm.tsx
src/components/configComponents/autoSummon/: AutoSummonConfElm.tsx  ShortcutConfElm.tsx  SizeConfElm.tsx  SwitchConfElm.tsx  ThresholdConfElm.tsx
src/components/frameComponents/: IntegratedFrame.tsx  MonitorFrame.tsx  WindowFrame.tsx
src/components/listComponents/: FrameRowComponent.tsx  ListComponent.tsx
src/hooks/: app-hook.ts  app_hook.ts  config-hook.ts  config_hook.ts  frame-hook.ts
