[package]
name = "win-win-map"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["app-all", "fs-all", "global-shortcut-all", "path-all", "process-exit", "window-set-size"] }
anyhow = "1.0.68"
once_cell = "1.17.0"
tokio = { version = "1.25.0", features = ["full"] }
crossbeam = "0.8.2"
env_logger = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"

[dev-dependencies]
ctrlc = "3.2.4"
dialoguer = "0.10.3"

[dependencies.windows]
varsion = "0.44.0"
features = [
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    # "interface",
]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
